[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
ctenv = { workspace = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
leptos-use = { version = "0.16.2", features = ["use_cookie"] }
supabase-js-rs = {version = "0.1.3", optional = true}
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
eyre = "0.6.12"
gloo-timers = { version = "0.3.0", optional = true }
tempfile = { version = "3.20.0", optional = true }
uuid = { version = "1.17.0", optional = true, features = ["v4"] }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "dep:gloo-timers",
  "dep:supabase-js-rs",
  "dep:serde-wasm-bindgen",
]
ssr = [
  "dep:leptos_axum",
  "dep:uuid",
  "dep:tempfile",
  "dep:tokio",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/ssr",
  "leptos-use/axum"
]
tempfile = ["dep:tempfile"]
uuid = ["dep:uuid"]
tokio = ["dep:tokio"]
